--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,3 @@
-
 creditcheckservice.baseurl=http://localhost:8080
+spring.cloud.stream.bindings.input.destination=credit_scores
+spring.cloud.stream.bindings.input.contentType=application/json
